Default app name for android desktop icon changed

--- a/src/components/favicons-bulk/favicons-bulk.pug
+++ b/src/components/favicons-bulk/favicons-bulk.pug
@@ -13,7 +13,7 @@ mixin faviconsBulk()
   link( rel="icon" type="image/png" href=require("@images/favicon/favicon-16x16.png")   sizes="16x16"   )
   link( rel="icon" type="image/png" href=require("@images/favicon/favicon-128.png")     sizes="128x128" )
 
-  meta( name="application-name"                content="&nbsp;"  )
+  meta( name="application-name"                content="Toxin Hotel"  )
   meta( name="msapplication-TileColor"         content="#FFFFFF" )
   meta( name="msapplication-TileImage"         content=require("@images/favicon/mstile-144x144.png") )
   meta( name="msapplication-square70x70logo"   content=require("@images/favicon/mstile-70x70.png")   )
