search page is under redesign 2

--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -210,8 +210,8 @@ block main
             ]
           })
       .search-page__filtered-items
-        .search-page__filtered-items-title
-          span.custom-font-style_h1 Номера, которые мы для вас подобрали
+        .search-page__filtered-items-title.custom-font-style_h1
+          span.search-page__filtered-items-title_text Номера, которые мы для вас подобрали
         .search-page__filtered-items-grid
           each sample in samples
             +cardRoomSample( sample )
