--- a/src/pages/website/__no-page/website__no-page.scss
+++ b/src/pages/website/__no-page/website__no-page.scss
@@ -57,15 +57,15 @@ $noteSize: 18px;
 }
 
 @keyframes glitch-anim {
-  0% {   clip: rect(14px, 100vw, 41px, 0); }
-  10% {  clip: rect(10px, 100vw, 94px, 0); }
-  20% {  clip: rect(82px, 100vw, 53px, 0); }
-  30% {  clip: rect(55px, 100vw, 8px, 0);  }
-  40% {  clip: rect(85px, 100vw, 71px, 0); }
-  50% {  clip: rect(60px, 100vw, 35px, 0); }
-  60% {  clip: rect(74px, 100vw, 58px, 0); }
-  70% {  clip: rect(85px, 100vw, 61px, 0); }
-  80% {  clip: rect(3px, 100vw, 30px, 0);  }
-  90% {  clip: rect(1px, 100vw, 7px, 0);   }
-  100% { clip: rect(68px, 100vw, 73px, 0); }
+  0% {   clip: rect( .14em, 100vw, .41em, 0 ); }
+  10% {  clip: rect( .10em, 100vw, .94em, 0 ); }
+  20% {  clip: rect( .82em, 100vw, .53em, 0 ); }
+  30% {  clip: rect( .55em, 100vw, .8em,  0 ); }
+  40% {  clip: rect( .85em, 100vw, .71em, 0 ); }
+  50% {  clip: rect( .60em, 100vw, .35em, 0 ); }
+  60% {  clip: rect( .74em, 100vw, .58em, 0 ); }
+  70% {  clip: rect( .85em, 100vw, .61em, 0 ); }
+  80% {  clip: rect( .3em,  100vw, .30em, 0 ); }
+  90% {  clip: rect( .1em,  100vw, .7em,  0 ); }
+  100% { clip: rect( .68em, 100vw, .73em, 0 ); }
 }
