login and registration pages is under redesign

--- a/src/pages/website/__login/website__login.scss
+++ b/src/pages/website/__login/website__login.scss
@@ -1,3 +1,9 @@
+@media only screen and (min-width: 381px) {
+  .login-page {
+    margin-block: 172px;
+  }
+}
+
 .login-page {
   display: flex;
   justify-content: center;
