--- a/src/pages/website/__registration/website__registration.scss
+++ b/src/pages/website/__registration/website__registration.scss
@@ -1,3 +1,9 @@
+@media only screen and (min-width: 381px) {
+  .registration-page {
+    margin-block: 19px;
+  }
+}
+
 .registration-page {
   display: flex;
   justify-content: center;
