--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -16,7 +16,7 @@ mixin cardRoomSample( item )
   - suffixes[0] = suffixes[4]
   - suffixes[5] = suffixes[1]
 
-  .room-sample.card-style_room-sample
+  .room-sample.card-style_alternative
     .room-sample__container_top
       .room-sample__image
         each suffix in suffixes
