--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -9,7 +9,7 @@
 
 .card-style {
   &_default,
-  &_room-sample {
+  &_alternative {
     background-color: $white;
     box-sizing: border-box;
   }
@@ -27,7 +27,8 @@
     }
   }
 
-  &_room-sample {
+  &_alternative {
+    border-radius: 4px;
     box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
   }
 }
