--- a/src/components/date-picker/date-picker.pug
+++ b/src/components/date-picker/date-picker.pug
@@ -1,15 +1,16 @@
 include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin datePicker( id )
-  .date-picker__element
-  .date-picker__buttons
-    .date-picker__buttons_clear
-      +meanOvalButtons({
-        groupname: `${id}-clear`,
-        buttons: [{ type: "text", text: "очистить" }]
-      })
-    .date-picker__buttons_submit
-      +meanOvalButtons({
-        groupname: `${id}-submit`,
-        buttons: [{ type: "text", text: "применить" }]
-      })
+  .date-picker
+    .date-picker__container
+    .date-picker__buttons
+      .date-picker__buttons_clear
+        +meanOvalButtons({
+          groupname: `${id}-clear`,
+          buttons: [{ type: "text", text: "очистить" }]
+        })
+      .date-picker__buttons_submit
+        +meanOvalButtons({
+          groupname: `${id}-submit`,
+          buttons: [{ type: "text", text: "применить" }]
+        })
