Added fixed height value for each ui-kit page using bg-color_whisper selector

--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -28,11 +28,12 @@
 
 .bg-color {
   &_white {
-    background-color: white;
+    background-color: $white;
   }
 
   &_whisper {
     background-color: $whisper;
+    height: 1350px;
   }
 }
 
