--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 @import "@variables";
 
 
-@media only screen and (max-width: 710px) {
+@media only screen and (max-width: 832px) {
   .header__sections {
     justify-content: center;
 
@@ -11,7 +11,7 @@
   }
 }
 
-@media only screen and (min-width: 710px) {
+@media only screen and (min-width: 832px) {
   .header__sections {
     justify-content: space-between;
 
@@ -38,20 +38,32 @@
 }
 
 .header {
-  justify-content: center;
-  padding-inline: 140px;
-  width: 100%;
-  height: 70px;
-  box-sizing: border-box;
   box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
-  background-color: $white;
-  
-  &,
+
+  &__wide-part,
   &__sections,
   &__sections_desktop,
   &__user-bar {
     display: flex;
     align-items: center;
+  }
+
+  &__wide-part {
+    justify-content: center;
+    padding-inline: 140px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  &__container {
+    &_general {
+      background-color: $white;
+      height: 70px;
+    }
+
+    &_ejectable {
+      
+    }
   }
   
   &__sections {
@@ -79,5 +91,15 @@
     grid-template-columns: repeat(2, auto);
     gap: 20px;
     align-items: center;
+  }
+
+  &__ejectable-button-panel {
+    background-color: $whisper;
+    height: 36px;
+  }
+
+  &__ejector {
+    background-color: $white;
+    height: 14px;
   }
 }
