Header is under reconstruction 4

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -15,7 +15,7 @@ mixin header( item )
           ]
         })
       .header__ejector.header__wide-part
-        +materialIcon("more_horiz", "")
+        +materialIcon("more_horiz", item.id)
     .header__container_general.header__wide-part
       .header__sections
         .header__sections_logo
