--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -77,6 +77,7 @@
     &_ejectable {
       display: none;
       transform: translateY(35px);
+      transition: transform .3s ease;
     }
   }
   
@@ -116,4 +117,8 @@
     color: rgba($valhalla, .5);
     height: 14px;
   }
+}
+
+.container-ejected {
+  transform: translateY(70px)
 }
