--- a/src/pages/website/website.pug
+++ b/src/pages/website/website.pug
@@ -9,7 +9,7 @@ head
 
 body.website__body
   header.website__header
-    +header({ id: "website-header", authorized: false })
+    +header({ authorized: false })
 
   block main
 
