Header is under reconstruction 9

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -8,7 +8,7 @@ mixin header( item )
     .header__container_ejectable
       .header__ejectable-button-panel.header__wide-part
         +meanOvalButtons({
-          groupname: "header__controllers",
+          groupname: "header-controller",
           buttons: [
             { type: "text", text: "критерии номера" },
             { type: "text", text: "навигация"       },
