Header is under reconstruction 12: occasions fixes

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -133,7 +133,7 @@
       box-shadow: inset 0px 10px 20px rgba($valhalla, 0.05);
     }
 
-    &_navigation {
+    &_filter-rooms {
       display: none;
     }
   }
