--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -3,6 +3,12 @@ extends ../website.pug
 block head 
   title TOXIN HOTEL / SEARCH
 
+block header
+  include /components/header/header.pug
+
+  header.website__header
+    +header({ authorized: false, filtering: true })
+
 block main
   -
     const samples = [
