--- a/src/pages/website/__landing/website__landing.pug
+++ b/src/pages/website/__landing/website__landing.pug
@@ -3,6 +3,12 @@ extends /pages/website/website.pug
 block head
   title TOXIN HOTEL / LANDING
 
+block header
+  include /components/header/header.pug
+
+  header.website__header
+    +header({ authorized: false })
+
 block main
   include /components/card/__find-room/card__find-room.pug
 
