Header is under reconstruction 13: fixed bug with non-hiding ejected container

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -11,7 +11,7 @@ mixin header( item )
           .header__ejectable-button_filter-rooms
             +meanOvalButtons({
               groupname: "ejectable-button_filter-rooms",
-              buttons: [{ type: "text", text: "подобрать номер" }]
+              buttons: [{ type: "text", text: "подбор номера" }]
             })
         .header__ejectable-button_navigation
           +meanOvalButtons({
