Transfering needed properties from dropdown entities to circle-button mixin

--- a/src/components/input/__dropdown/input__dropdown.pug
+++ b/src/components/input/__dropdown/input__dropdown.pug
@@ -1,5 +1,6 @@
 include /components/material-icon-cell/material-icon-cell.pug
 include /components/button/__mean-oval/button__mean-oval.pug
+include /components/button/__circle/button__circle.pug
 
 mixin inputDropdown( item )
   - const guestsOptionNames = [ 'взрослые', 'дети', 'младенцы' ]
