Transfering needed properties from dropdown entities to circle-button mixin 2

--- a/src/components/button/__circle/button__circle.pug
+++ b/src/components/button/__circle/button__circle.pug
@@ -1,2 +1,7 @@
+include /components/material-icon-cell/material-icon-cell.pug
+
 mixin circleButton( item )
-  
+  - const id = item.id + '_' + item.icon
+
+  .circle-button
+    +materialIcon( item.icon, id )
