--- a/src/components/button/__circle/button__circle.pug
+++ b/src/components/button/__circle/button__circle.pug
@@ -1,7 +1,9 @@
 include /components/material-icon-cell/material-icon-cell.pug
 
 mixin circleButton( item )
-  - const id = item.id + '_' + item.icon
-
-  .circle-button
-    +materialIcon( item.icon, id )
+  if ( item.text )
+    .circle-button #{item.text}
+  if ( item.icon )
+    - const id = item.id + '_' + item.icon
+    .circle-button
+      +materialIcon( item.icon, id )
