input__dropdown is under refactoring

--- a/src/components/input/__dropdown/input__dropdown.scss
+++ b/src/components/input/__dropdown/input__dropdown.scss
@@ -25,21 +25,21 @@
   &__option {
     align-items: center;
 
-    &_name {
+    &-name {
       text-transform: uppercase;
     }
 
-    &_counter,
-    &_buttons {
+    &-counter,
+    &-button-block {
       display: flex;
     }
 
-    &_buttons {
+    &-button-block {
       justify-content: space-between;
       width: 92px;
     }
 
-    &_counter {
+    &-counter {
       justify-content: center;
       align-items: center;
       height: 30px;
