--- a/src/components/input/__dropdown/input__dropdown.pug
+++ b/src/components/input/__dropdown/input__dropdown.pug
@@ -18,11 +18,13 @@ mixin inputDropdown( item )
   .input__dropdown.expander__aim( class=expanderActiveClass data-options-type=dropdown.type )
     each option, index in options
       .input__option.custom-font-style_h3
-        span.input__option_name #{option}
-        .input__option_buttons
-          +circleButton({ text: '-' })
-          .input__option_counter #{values[index]}
-          +circleButton({ text: '+' })
+        span.input__option-name #{option}
+        .input__option-button-block
+          .input__option-button_increase
+            +circleButton({ text: '-' })
+          .input__option-counter #{values[index]}
+          .input__option-button_increase
+            +circleButton({ text: '+' })
     if ( dropdown.controls )
       .input__state-controllers
         +meanOvalButtons({
