--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -36,3 +36,7 @@ $quaternary-gradient: defineGradient( $suva-grey , $port-gore );
 $wideFramesWidthMax:  1600px;
 $wideFramesWidthMin:  1100px;
 $wideFramesWidthBase: 1440px;
+
+@function calcRelativeFontSize( $value ) {
+  @return #{$value / 16}rem;
+}
