--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -39,22 +39,22 @@
   }
 
   &_h1 {
-    font-size: 24px;
+    font-size: calcRelativeFontSize( 24 );
   }
 
   &_h2 {
-    font-size: 19px;
-    line-height: 23px;
+    font-size: calcRelativeFontSize( 19 );
+    line-height: calcRelativeFontSize( 23 );
   }
 
   &_h3 {
-    font-size: 12px;
+    font-size: calcRelativeFontSize( 12 );
   }
 
   &_body,
   &_body-plain {
-    font-size: 14px;
-    line-height: 24px;
+    font-size: calcRelativeFontSize( 14 );
+    line-height: calcRelativeFontSize( 24 );
   }
 
   &_body {
@@ -67,8 +67,8 @@
 
   &_micro-note {
     color: rgba($valhalla, .5);
-    font-size: 12px;
-    line-height: 14px;
+    font-size: calcRelativeFontSize( 12 );
+    line-height: calcRelativeFontSize( 14 );
   }
 }
 
