Transfered functional and decorative entities into new entities section within src catalog

--- a/src/components/button/__like/button__like.scss
+++ b/src/components/button/__like/button__like.scss
@@ -1,6 +1,6 @@
 @import "@variables";
 @import "../button.scss";
-@import "../../../styles/gradient-fill-entities.scss";
+@import "/src/entities/__gradient-filled/entities__gradient-filled.scss";
 
 .like-button {
   display: flex;
