implementing modal window in website pages

--- a/src/components/modal-window/modal-window.pug
+++ b/src/components/modal-window/modal-window.pug
@@ -1,11 +1,17 @@
 include /components/navigation-bar/navigation-bar.pug
+include /components/button/__circle/button__circle.pug
 
 mixin modalWindow( item )
   .modal-window
     .modal-window__links
-      +navigationBar({
-        title: item.title,
-        links: item.links,
-        vertical: true,
-      })
+      if ( item.links )
+        +navigationBar({
+          title: item.title,
+          links: item.links,
+          vertical: true,
+        })
     .modal-window__close-button
+      +circleButton({
+        id: item.id,
+        icon: 'close'
+      })
