--- a/src/components/modal-window/modal-window.scss
+++ b/src/components/modal-window/modal-window.scss
@@ -1,6 +1,14 @@
 .modal-window {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
+  padding-top: 50px;
   width: 100%;
-  height: 100%;
-  
+  top: 71px;
+
+  &__close-button {
+    width: 80px;
+    height: 80px;
+  }
 }
