Changed website header components hierarchy

--- a/src/components/modal-window/modal-window.scss
+++ b/src/components/modal-window/modal-window.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 25px;
   position: absolute;
+  background-color: azure;
   padding-top: 50px;
   width: 100%;
   top: 71px;
