--- a/src/pages/website/website.pug
+++ b/src/pages/website/website.pug
@@ -12,6 +12,7 @@ body.website__body
     block header
     .modal-window_navigation
       +modalWindow({
+        id: "navigation-modal-window",
         title: "Навигация",
         links: [
           { name: "О нас" },
@@ -23,6 +24,7 @@ body.website__body
       })
     .modal-window_authorization
       +modalWindow({
+        id: "authorization-modal-window",
         title: "Авторизация",
         links: [
           { 
